# arduino_clion_template

./: README.md
ArduinoTemplate/: CMakeLists.txt  main.cpp
